2833 [Video Player]         improved High DPI support
2832 [File Indexer]         show DGIndexIM/NV only if enabled in the settings
     [File Indexer]         enabled "select audio tracks" for DGIndexIM/NV
2831 [Audio Encoder]        x64: improved the downmix functions for 7.1/6.1 to 5.1
2830                        reset view settings once to properly adjust for 2829
2829                        improved High DPI support (e.g. when changing DPI values)
     [HD Streams Extractor] removed the custom "+ Options" column by default and added an option to show it

Changelog 2808 --> 2828

Features/Changes:
                       added High DPI support
[Jobs]                 added option to pause/resume jobs             

Enhancements/Fixes:
[File Indexer]         improved handling of Blu-ray playlists
[OneClick]             added a profile option to set an output file suffix
[OneClick]             fixed "-" button behaviour if only one track is available (regression of 2808)
[OneClick]             fixed not updating the output folder path properly (regression of 2807)
[x264]                 added support for AVC level 6, 6.1 and 6.2 (requires x264 2851+)
[x264]                 added support for unified 8/10 bit binaries (requires x264 2901+)
[x265]                 added support for --tune grain


Changelog 2774 --> 2808

Features/Changes:
[AVS Script Creator]   DirectShowSource/AVISource are disabled by default and have to be enabled in the MeGUI settings
[File Indexer]         added MPLS support
[OneClick]             added support for MKV attachments. If the MKV source does have such attachments, it will be copied to the target MKV. feature request #617
[Xvid]                 added a workaround to be able to use Xvid in portable AviSynth mode
[Update]               added a first start-up question if the updater should be enabled or disabled (message will be shown also once to existing users)